@@ -1,3 +1,11 @@
+2007-12-19  Kevin Cozens  <kcozens@cvs.gnome.org>
+
+	Merged from trunk:
+
+	* plug-ins/script-fu/tinyscheme/scheme.c: Added extra checks to stop
+	bad syntax in LET*, LET, and LETREC from causing a segmentation fault
+	in Linux. See SourceForge bug #1817986.
+
 2007-12-18  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
